Add the polyfill

--- a/docs/product/components/navigation.html
+++ b/docs/product/components/navigation.html
@@ -46,7 +46,7 @@ description: Our navigation component is a collection of pill-shaped buttons tha
             <p class="ff-mono mb8">Full width</p>
             <div class="s-navigation mb32">
                 <a tabindex="0" class="s-navigation--item is-selected">Product</a>
-                <button class="s-navigation--item">Email</button>
+                <button tabindex="0" class="s-navigation--item">Email</button>
                 <a tabindex="0" class="s-navigation--item">Content</a>
                 <a tabindex="0" class="s-navigation--item">Brand</a>
                 <a tabindex="0" class="s-navigation--item">Marketing</a>
