--- a/lib/css/components/_stacks-navigation.less
+++ b/lib/css/components/_stacks-navigation.less
@@ -43,8 +43,7 @@
         color: var(--black-600);
 
         &:hover,
-        &:active,
-        &:focus {
+        &:active {
             background: var(--black-100);
             color: var(--black-600);
         }
@@ -52,6 +51,11 @@
         &.is-selected {
             background: @navigation-link-highlight;
             color: var(--white);
+        }
+
+        &.focus-visible {
+            outline: none;
+            box-shadow: 0 0 0 @su4 var(--focus-ring);
         }
     }
 
