More merge conflicts

--- a/docs/_includes/layouts/page.html
+++ b/docs/_includes/layouts/page.html
@@ -14,7 +14,7 @@
                 <div class="ps-sticky t64 pt16">
                     <h5 class="mb8 fw-bold tt-uppercase fs-fine fc-theme-primary mnl1">Sections</h5>
                     {{ content | toc | safe }}
-                </aside>
+                </div>
             </div>
             {% comment %}
                 This container’s .fl1 doesn't behave properly unless we add an explicit width.
