--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="flex--cell">
-                    <div class="f-flex ai-center jc-space-between fs8">
+                    <div class="d-flex ai-center jc-space-between fs8">
                         <label class="flex--cell s-label fs-body1 fw-normal" for="toggle-theme-custom">Custom theme</label>
                         <div class="flex--cell s-toggle-switch">
                             <input id="toggle-theme-custom" type="checkbox">
