--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -40,9 +40,9 @@
                         id="theming-popover"
                         role="menu">
                         <div class="s-popover--arrow"></div>
-                        <div class="grid fd-column gs12 gsy">
-                            <button class="grid--cell ta-left s-btn__unset fc-black-600 c-pointer js-darkmode-btn">Toggle dark mode</button>
-                            <button class="grid--cell ta-left s-btn__unset fc-black-600 c-pointer js-theme-btn">Toggle custom theme</button>
+                        <div class="d-flex fd-column fs12 fsy">
+                            <button class="flex--cell ta-left s-btn__unset fc-black-600 c-pointer js-darkmode-btn">Toggle dark mode</button>
+                            <button class="flex--cell ta-left s-btn__unset fc-black-600 c-pointer js-theme-btn">Toggle custom theme</button>
                         </div>
                     </div>
                 </div>
