--- a/docs/product/components/tags.html
+++ b/docs/product/components/tags.html
@@ -104,17 +104,17 @@ description: Tags are an interactive, community-generated keyword that allow com
     {% header "h3", "Themed" %}
     <div class="stacks-preview">
 {% highlight html %}
-<div class="grid gs4">
-    <a class="grid--cell s-tag s-tag__themed" href="#">asp-net</a>
-    <a class="grid--cell s-tag s-tag__themed" href="#">netscape <span class="s-tag--dismiss">@Svg.ClearSm</span></a>
-    <a class="grid--cell s-tag s-tag__themed" href="#"><img class="s-tag--sponsor" src="https://i.stack.imgur.com/gfrSH.png" width="18" height="16" alt="SQL Server"> sql-server</a>
+<div class="d-flex gs4">
+    <a class="flex--cell s-tag s-tag__themed" href="#">asp-net</a>
+    <a class="flex--cell s-tag s-tag__themed" href="#">netscape <span class="s-tag--dismiss">@Svg.ClearSm</span></a>
+    <a class="flex--cell s-tag s-tag__themed" href="#"><img class="s-tag--sponsor" src="https://i.stack.imgur.com/gfrSH.png" width="18" height="16" alt="SQL Server"> sql-server</a>
 </div>
 {% endhighlight %}
         <div class="stacks-preview--example">
-            <div class="grid gs4 fw-wrap">
-                <a class="grid--cell s-tag s-tag__themed" href="#">asp-net</a>
-                <a class="grid--cell s-tag s-tag__themed" href="#">netscape <span class="s-tag--dismiss">{% icon "ClearSm" %}</span></a>
-                <a class="grid--cell s-tag s-tag__themed" href="#"><img class="s-tag--sponsor" src="https://i.stack.imgur.com/gfrSH.png" width="18" height="16" alt="SQL Server"> sql-server</a>
+            <div class="f-flex gs4 fw-wrap">
+                <a class="flex--cell s-tag s-tag__themed" href="#">asp-net</a>
+                <a class="flex--cell s-tag s-tag__themed" href="#">netscape <span class="s-tag--dismiss">{% icon "ClearSm" %}</span></a>
+                <a class="flex--cell s-tag s-tag__themed" href="#"><img class="s-tag--sponsor" src="https://i.stack.imgur.com/gfrSH.png" width="18" height="16" alt="SQL Server"> sql-server</a>
             </div>
         </div>
     </div>
