--- a/docs/product/components/tags.html
+++ b/docs/product/components/tags.html
@@ -111,7 +111,7 @@ description: Tags are an interactive, community-generated keyword that allow com
 </div>
 {% endhighlight %}
         <div class="stacks-preview--example">
-            <div class="f-flex gs4 fw-wrap">
+            <div class="d-flex gs4 fw-wrap">
                 <a class="flex--cell s-tag s-tag__themed" href="#">asp-net</a>
                 <a class="flex--cell s-tag s-tag__themed" href="#">netscape <span class="s-tag--dismiss">{% icon "ClearSm" %}</span></a>
                 <a class="flex--cell s-tag s-tag__themed" href="#"><img class="s-tag--sponsor" src="https://i.stack.imgur.com/gfrSH.png" width="18" height="16" alt="SQL Server"> sql-server</a>
